--- a/i18n/vi.yaml
+++ b/i18n/vi.yaml
@@ -1,3 +1,4 @@
 copyright: "© 2025 Đinh Ngọc Dũng. Powered by Hextra/Hugo"
 navAbout: "Dũng"
 navDisussions: "Đặt câu hỏi ↗"
+navHelp: "Cải thiện Ghi chú này ↗"
